Add text to about.html and alter navbar styling

--- a/about.html
+++ b/about.html
@@ -15,9 +15,7 @@
             </div>
             <div class="content">
                 <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                   Voluptatibus nemo enim inventore ex quibusdam iure, magni velit asperiores exercitationem,
-                   eius, nostrum dolorem ipsa? Pariatur, debitis? Nihil praesentium voluptatem cumque reprehenderit.</p>
+                <p>I believe in inclusivity, dancing is open to everyone. I don’t teach men’s and ladies steps but leader and follower. Whether you are a LBGTQ+, mother and daughter or two friends, you will have fun dancing together. You are never too old to learn either. You will just wish you started years ago.</p>
                    <div class="button">
                     <a href="#">Read More</a>
                    </div>
@@ -30,7 +28,7 @@
             </div>
         </div>
         <div class="image-section">
-            <img src="images\Strictly - Brendan Cole.jpg" alt="">
+            <img src="./f2d_images/Strictly - Brendan Cole.jpg" alt="">
         </div>
     </div>
    </div>
