--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fun2Dance</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="./about.css">
 </head>
 <body>
@@ -77,10 +77,10 @@
             </div>
         <div class="col image-col">
             <div class="image-gallery">
-                <img src="./images\7_Samba_Class.JPG" alt="">
-                <img src="./images/5_La_Rueda_ _Performance.JPG" alt="">
-                <img src="./images/1_Fun2dance_2nd_Anniversary.JPG" alt="">
-                <img src="./images/2_Southampton_ Class.JPG" alt="">
+                <img src="./f2d_images/7_Samba_Class.JPG" alt="">
+                <img src="./f2d_images/5_La_Rueda_ _Performance.JPG" alt="">
+                <img src="./f2d_images/1_Fun2dance_2nd_Anniversary.JPG" alt="">
+                <img src="./f2d_images/2_Southampton_ Class.JPG" alt="">
             </div>
         </div>
         </div>
