Add alternative background to about page

--- a/about.html
+++ b/about.html
@@ -5,13 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Fun2Dance</title>
     <link href="about.css" rel="stylesheet">
+    
 </head>
 <body>
+     <!--Navbar-->
+ <nav class="navbar">
+    <h1 class="logo"><div class="fun">Fun</div><div class="two">2</div><div class="dance">dance</div></h1>  
+        <ul class="nav-links">
+                <li class="active"><a href="#"></a>Home</li>
+                <li><a href="about.html">About Fun2Dance</a></li>
+                <li><a href="#">Classes</a></li>
+                <li><a href="#">Weddings</a></li>
+                <li><a href="#">Gallery</a></li>
+                <li><a href="#">Vouchers</a></li>
+                <li class="ctn"><a href="">Contact</a></li>
+            </ul>
+        <div class="mobile-nav">
+            <img src="images\menu-btn.png" alt="" class="menu-btn">
+            <h1 class="close-btn">X</h1>
+        </div>
+    </nav>
    <div class="section">
     <div class="container">
         <div class="content-section">
             <div class="title">
-                <h1>About <div class="fun">Fun</div>2<div class="dance">Dance</div></h1>
+                <h1><div class="about">About</div><div class="fun">Fun</div> <div class="two">2</div><div class="dance">Dance</div></h1>
             </div>
             <div class="content">
                 <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
