--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
  <nav class="navbar">
     <h1 class="logo"><div class="fun">Fun</div><div class="two">2</div><div class="dance">dance</div></h1>  
         <ul class="nav-links">
-                <li class="active"><a href="#"></a>Home</li>
-                <li><a href="about.html">About Fun2Dance</a></li>
+                <li class="active"><a href="index.html"></a>Home</li>
+                <li><a href="about.html"></a>About Fun2Dance</li>
                 <li><a href="#">Classes</a></li>
                 <li><a href="#">Weddings</a></li>
                 <li><a href="#">Gallery</a></li>
