change headings for lessons section

--- a/about.html
+++ b/about.html
@@ -12,8 +12,8 @@
  <nav class="navbar">
     <h1 class="logo"><div class="fun">Fun</div><div class="two">2</div><div class="dance">dance</div></h1>  
         <ul class="nav-links">
-                <li class="active"><a href="#"></a>Home</li>
-                <li><a href="about.html">About Fun2Dance</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li class="active"><a href="#">About Fun2Dance</a></li>
                 <li><a href="#">Classes</a></li>
                 <li><a href="#">Weddings</a></li>
                 <li><a href="#">Gallery</a></li>
