--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
  <nav class="navbar">
     <h1 class="logo"><div class="fun">Fun</div><div class="two">2</div><div class="dance">dance</div></h1>  
         <ul class="nav-links">
-                <li class="active"><a href="index.html"></a>Home</li>
-                <li><a href="about.html"></a>About Fun2Dance</li>
+                <li class="active"><a href="#"></a>Home</li>
+                <li><a href="about.html">About Fun2Dance</a></li>
                 <li><a href="#">Classes</a></li>
                 <li><a href="#">Weddings</a></li>
                 <li><a href="#">Gallery</a></li>
@@ -31,7 +31,7 @@
         <div class="header-content">
             <h2>Learn and Have Fun With</h2>
             <div class="line"></div>
-            <h1>FUN2DANCE</h1>
+            <h1 class="name">FUN2DANCE</h1>
             <a href="#" class="ctn">Learn More</a>
         </div>
     </header> 
@@ -39,19 +39,25 @@
     <!--== Events and Lessons == -->
     <section class="classes">
         <div class="title">
-            <h1>Upcoming Classes</h1>
+            <h1>Dance Lessons</h1>
             <div class="line"></div>
         </div>
         <div class="row">
             <div class="col">
                 <img src="./images/7_Samba_Class.JPG" alt="">
-                <h4>Learn To Samba</h4>
+                <h4>Ballroom</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum mollitia a cum rem sed molestias odit quod.</p>
                 <a href="#" class="ctn">Learn More</a>
             </div>
             <div class="col">
                 <img src="images\8_Paso_Doble _Class.jpg" alt="">
-                <h4>Learn The Paso Doble</h4>
+                <h4>Latin</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum mollitia a cum rem sed molestias.</p>
+                <a href="#" class="ctn">Learn More</a>
+            </div>
+            <div class="col">
+                <img src="images\8_Paso_Doble _Class.jpg" alt="">
+                <h4>Wedding Choreography</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum mollitia a cum rem sed molestias.</p>
                 <a href="#" class="ctn">Learn More</a>
             </div>
