Add new imgs and html/css for services cards

--- a/index.html
+++ b/index.html
@@ -44,19 +44,19 @@
         </div>
         <div class="row">
             <div class="col">
-                <img src="./images/7_Samba_Class.JPG" alt="">
+                <img src="./f2d_images/ballrrom_pair_sketch.jpg" alt="">
                 <h4>Ballroom</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum mollitia a cum rem sed molestias odit quod.</p>
                 <a href="#" class="ctn">Learn More</a>
             </div>
             <div class="col">
-                <img src="images\8_Paso_Doble _Class.jpg" alt="">
+                <img src="./f2d_images/latin_dance_pair.jpg" alt="">
                 <h4>Latin</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum mollitia a cum rem sed molestias.</p>
                 <a href="#" class="ctn">Learn More</a>
             </div>
             <div class="col">
-                <img src="images\8_Paso_Doble _Class.jpg" alt="">
+                <img src="./f2d_images/12_Wedding _Couple.jpg" alt="">
                 <h4>Wedding Choreography</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum mollitia a cum rem sed molestias.</p>
                 <a href="#" class="ctn">Learn More</a>
@@ -94,8 +94,8 @@
  <!--footer-->
  
  <section class="footer">
-    <p>123 Fifth Avenue, NY 10160, New York, USA | Phone: 800-123-456 | Email: contact@example.com</p>
-    <p>Background Image By Freepik</p>
+    <p><a href="https://www.freepik.com/free-vector/hand-drawn-ballroom-dancing-silhouette_82335741.htm#position=2">Image by freepik</a></p>
+    <p><a href="https://www.freepik.com/free-vector/feria-de-cali-dancers_137586121.htm#position=1">Image by gstudioimagen on Freepik</a></p>
 </section>
 
     <script>
