Alter CSS styling for grid services layout

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         <ul class="nav-links">
                 <li class="active"><a href="#"></a>Home</li>
                 <li><a href="about.html">About Fun2Dance</a></li>
-                <li><a href="#">Classes</a></li>
-                <li><a href="#">Weddings</a></li>
+                <li><a href="#">Private Lessons</a></li>
                 <li><a href="#">Gallery</a></li>
-                <li><a href="#">Vouchers</a></li>
+                <li><a href="#">Gift Vouchers</a></li>
+                <li><a href="#">Books</a></li>
                 <li class="ctn"><a href="">Contact</a></li>
             </ul>
         <div class="mobile-nav">
