--- a/card-layout.html
+++ b/card-layout.html
@@ -9,71 +9,71 @@
 <body>
     <main>
         <div class="container">
-
+            <h1 class="main-title">All Dance Lessons</h1>
             <div class="services-grid">
 
-                <div class="card">
+                <div class="card stacked featured">
                     <img src="./f2d_images/ballrrom_pair_sketch.jpg" alt="Silouette of ballroom dance pair" class="card__img">
                     <div class="card__content">   
                         <h2 class="card__title">Ballroom Dance Lessons</h2>
-                        <p class="dance__info">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente iste maxime laudantium deserunt et fuga adipisci accusamus, dicta quasi modi totam, ex nobis porro praesentium saepe deleniti repellat molestias distinctio.</p>
+                        <p class="card__info">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente iste maxime laudantium deserunt et fuga adipisci accusamus, dicta quasi modi totam, ex nobis porro praesentium saepe deleniti repellat molestias distinctio.</p>
                         <a href="" class="more__info">More Info</a>
                     </div> 
                 </div>
-                <div class="card">
-                    <img src="./f2d_images/latin_dance_pair.jpg" alt="Silouette of ballroom dance pair" class="card__img">
-                    <div class="card__content">   
-                        <h2 class="card-title">Latin Dance Lessons</h2>
-                        <p class="dance__info">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam nesciunt quod quis, quas repellendus mollitia accusamus blanditiis dolor beatae odit aut, exercitationem, nobis commodi sint vitae doloremque laudantium voluptatum ipsa.</p>
-                        <a href="" class="more__info">More Info</a>
-                    </div> 
-                </div>
-                <div class="card">
-                    <img src="./f2d_images/12_Wedding _Couple.jpg" alt="Silouette of ballroom dance pair" class="card__img">
-                    <div class="card__content">   
-                        <h2 class="card-title">Wedding Dance Lessons</h2>
-                        <p class="dance__info">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Asperiores perspiciatis dolor tenetur nesciunt magni maxime dolore ullam aspernatur! At earum, delectus tenetur fugit voluptatum nesciunt harum molestiae itaque explicabo dicta?</p>
-                        <a href="" class="more__info">More Info</a>
-                    </div> 
-                </div>
-                <div class="card">
-                    <img src="./f2d_images/ballrrom_pair_sketch.jpg" alt="Silouette of ballroom dance pair" class="card__img">
-                    <div class="card__content">   
-                        <h2 class="card__title">Ballroom Dance Lesson</h2>
-                        <p class="dance__info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam officia laboriosam porro ea non voluptatem consequuntur repellendus a pariatur dignissimos esse provident blanditiis, velit soluta sequi eaque veritatis asperiores hic?</p>
-                        <a href="" class="more__info">More Info</a>
-                    </div> 
-                </div>
-                <div class="card">
+                <div class="card stacked">
                     <img src="./f2d_images/latin_dance_pair.jpg" alt="Silouette of ballroom dance pair" class="card__img">
                     <div class="card__content">   
                         <h2 class="card__title">Latin Dance Lessons</h2>
-                        <p class="dance__info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint nam, quis incidunt rem 
+                        <p class="card__info">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam nesciunt quod quis, quas repellendus mollitia accusamus blanditiis dolor beatae odit aut, exercitationem, nobis commodi sint vitae doloremque laudantium voluptatum ipsa.</p>
+                        <a href="" class="more__info">More Info</a>
+                    </div> 
+                </div>
+                <div class="card stacked">
+                    <img src="./f2d_images/12_Wedding _Couple.jpg" alt="Silouette of ballroom dance pair" class="card__img">
+                    <div class="card__content">   
+                        <h2 class="card__title">Wedding Dance Lessons</h2>
+                        <p class="card__info">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Asperiores perspiciatis dolor tenetur nesciunt magni maxime dolore ullam aspernatur! At earum, delectus tenetur fugit voluptatum nesciunt harum molestiae itaque explicabo dicta?</p>
+                        <a href="" class="more__info">More Info</a>
+                    </div> 
+                </div>
+                <div class="card stacked">
+                    <img src="./f2d_images/ballrrom_pair_sketch.jpg" alt="Silouette of ballroom dance pair" class="card__img">
+                    <div class="card__content">   
+                        <h2 class="card__title">Ballroom Dance Lesson</h2>
+                        <p class="card__info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam officia laboriosam porro ea non voluptatem consequuntur repellendus a pariatur dignissimos esse provident blanditiis, velit soluta sequi eaque veritatis asperiores hic?</p>
+                        <a href="" class="more__info">More Info</a>
+                    </div> 
+                </div>
+                <div class="card stacked">
+                    <img src="./f2d_images/latin_dance_pair.jpg" alt="Silouette of ballroom dance pair" class="card__img">
+                    <div class="card__content">   
+                        <h2 class="card__title">Latin Dance Lessons</h2>
+                        <p class="card__info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint nam, quis incidunt rem 
                             laudantium repellat animi. Asperiores officiis voluptates illo consequatur mollitia corrupti. Soluta, dolor! Eius iusto vel quod quia.</p>
                         <a href="" class="more__info">More Info</a>
                     </div> 
                 </div>
-                <div class="card">
+                <div class="card stacked">
                     <img src="./f2d_images/12_Wedding _Couple.jpg" alt="Silouette of ballroom dance pair" class="card__img">
                     <div class="card__content">   
                         <h2 class="card__title">First Wedding Dance Lessons</h2>
-                        <p class="dance__info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, sint nobis? Mollitia officia excepturi repellat consequuntur, inventore praesentium perferendis cum dicta illum. Quidem exercitationem earum dolor aliquid veritatis esse hic!</p>
+                        <p class="card__info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, sint nobis? Mollitia officia excepturi repellat consequuntur, inventore praesentium perferendis cum dicta illum. Quidem exercitationem earum dolor aliquid veritatis esse hic!</p>
                         <a href="" class="more__info">More Info</a>
                     </div> 
                 </div>
-                <div class="card">
+                <div class="card stacked">
                     <img src="./f2d_images/ballrrom_pair_sketch.jpg" alt="Silouette of ballroom dance pair" class="card__img">
                     <div class="card__content">   
                         <h2 class="card__title">Sequence and Fun Dances</h2>
-                        <p class="dance__info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab praesentium corrupti assumenda ut quae expedita maxime doloremque, beatae laudantium quaerat dolorem explicabo, deserunt fugit eaque quas debitis aliquam, sit consequatur!</p>
+                        <p class="card__info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab praesentium corrupti assumenda ut quae expedita maxime doloremque, beatae laudantium quaerat dolorem explicabo, deserunt fugit eaque quas debitis aliquam, sit consequatur!</p>
                         <a href="" class="more__info">More Info</a>
                     </div> 
                 </div>
-                <div class="card">
+                <div class="card stacked">
                     <img src="./f2d_images/ballrrom_pair_sketch.jpg" alt="Silouette of ballroom dance pair" class="card__img">
                     <div class="card__content">   
                         <h2 class="card__title">Ballroom Dance Lessons</h2>
-                        <p class="dance__info">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Temporibus quidem hic illum iure, quisquam consequatur impedit neque asperiores ea, nostrum ipsa aliquam quaerat cumque autem vero labore. Veniam, necessitatibus tenetur?</p>
+                        <p class="card__info">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Temporibus quidem hic illum iure, quisquam consequatur impedit neque asperiores ea, nostrum ipsa aliquam quaerat cumque autem vero labore. Veniam, necessitatibus tenetur?</p>
                         <a href="" class="more__info">More Info</a>
                     </div> 
                 </div>
